# conan-xmlsec

./: CMakeLists.txt  FindXmlsecC.cmake  XSECConfig.hpp  conanfile.py  config.h  winapi.patch
src/: Makefile.in  aclocal.m4  config.h.in  configure
src/xsec/: Makefile.in
src/xsec/canon/: XSECC14n20010315.cpp  XSECC14n20010315.hpp  XSECCanon.hpp  XSECXMLNSStack.cpp
src/xsec/dsig/: DSIGAlgorithmHandlerDefault.cpp  DSIGAlgorithmHandlerDefault.hpp  DSIGConstants.cpp  DSIGConstants.hpp  DSIGKeyInfo.hpp  DSIGKeyInfoList.cpp  DSIGKeyInfoList.hpp  DSIGKeyInfoMgmtData.cpp  DSIGKeyInfoMgmtData.hpp  DSIGKeyInfoName.cpp  DSIGKeyInfoName.hpp  DSIGKeyInfoPGPData.cpp  DSIGKeyInfoPGPData.hpp  DSIGKeyInfoSPKIData.cpp  DSIGKeyInfoSPKIData.hpp  DSIGKeyInfoValue.cpp  DSIGKeyInfoValue.hpp  DSIGKeyInfoX509.cpp  DSIGKeyInfoX509.hpp  DSIGObject.cpp  DSIGObject.hpp  DSIGReference.cpp  DSIGReference.hpp  DSIGReferenceList.cpp  DSIGReferenceList.hpp  DSIGSignature.cpp  DSIGSignature.hpp  DSIGSignedInfo.cpp  DSIGSignedInfo.hpp  DSIGTransform.cpp  DSIGTransform.hpp  DSIGTransformBase64.cpp  DSIGTransformBase64.hpp  DSIGTransformC14n.cpp  DSIGTransformC14n.hpp  DSIGTransformEnvelope.cpp  DSIGTransformEnvelope.hpp  DSIGTransformList.cpp  DSIGTransformList.hpp  DSIGTransformXPath.cpp  (+9 more)
src/xsec/enc/: XSECCryptoBase64.hpp  XSECCryptoException.cpp  XSECCryptoException.hpp  XSECCryptoHash.hpp  XSECCryptoKey.hpp  XSECCryptoKeyDSA.hpp  XSECCryptoKeyHMAC.hpp  XSECCryptoKeyRSA.hpp  XSECCryptoProvider.hpp  XSECCryptoSymmetricKey.hpp  XSECCryptoUtils.cpp  XSECCryptoUtils.hpp  XSECCryptoX509.cpp  XSECCryptoX509.hpp  XSECKeyInfoResolver.hpp  XSECKeyInfoResolverDefault.cpp
src/xsec/enc/OpenSSL/: OpenSSLCryptoBase64.hpp  OpenSSLCryptoHash.cpp  OpenSSLCryptoHash.hpp  OpenSSLCryptoHashHMAC.cpp  OpenSSLCryptoHashHMAC.hpp  OpenSSLCryptoKeyDSA.cpp  OpenSSLCryptoKeyDSA.hpp  OpenSSLCryptoKeyHMAC.cpp  OpenSSLCryptoKeyHMAC.hpp  OpenSSLCryptoKeyRSA.cpp  OpenSSLCryptoKeyRSA.hpp  OpenSSLCryptoProvider.cpp  OpenSSLCryptoProvider.hpp  OpenSSLCryptoSymmetricKey.cpp  OpenSSLCryptoSymmetricKey.hpp  OpenSSLCryptoX509.cpp  OpenSSLCryptoX509.hpp
src/xsec/enc/WinCAPI/: WinCAPICryptoHash.hpp  WinCAPICryptoHashHMAC.cpp  WinCAPICryptoHashHMAC.hpp  WinCAPICryptoKeyDSA.cpp  WinCAPICryptoKeyDSA.hpp  WinCAPICryptoKeyHMAC.cpp  WinCAPICryptoKeyHMAC.hpp  WinCAPICryptoKeyRSA.cpp  WinCAPICryptoKeyRSA.hpp  WinCAPICryptoProvider.cpp  WinCAPICryptoProvider.hpp  WinCAPICryptoSymmetricKey.cpp  WinCAPICryptoSymmetricKey.hpp  WinCAPICryptoX509.cpp  WinCAPICryptoX509.hpp
src/xsec/enc/XSCrypt/: XSCryptCryptoBase64.hpp
src/xsec/framework/: XSECAlgorithmHandler.hpp  XSECAlgorithmMapper.cpp  XSECAlgorithmMapper.hpp  XSECDefs.hpp  XSECEnv.cpp  XSECEnv.hpp  XSECError.hpp  XSECException.hpp  XSECProvider.cpp  XSECProvider.hpp  XSECURIResolver.hpp  XSECURIResolverXerces.cpp  XSECURIResolverXerces.hpp  XSECW32Config.hpp
src/xsec/samples/: simpleDecrypt.cpp  simpleEncrypt.cpp
src/xsec/tools/c14n/: c14n.cpp
src/xsec/tools/checksig/: AnonymousResolver.cpp  InteropResolver.cpp  InteropResolver.hpp  checksig.cpp
src/xsec/tools/cipher/: XencInteropResolver.cpp  XencInteropResolver.hpp  cipher.cpp
src/xsec/tools/siginf/: siginf.cpp
src/xsec/tools/templatesign/: templatesign.cpp
src/xsec/tools/threadTest/: threadtest.cpp
src/xsec/tools/txfmout/: txfmout.cpp
src/xsec/tools/xklient/: xklient.cpp
src/xsec/tools/xtest/: xtest.cpp
src/xsec/transformers/: TXFMBase.cpp  TXFMBase.hpp  TXFMBase64.cpp  TXFMBase64.hpp  TXFMC14n.cpp  TXFMC14n.hpp  TXFMChain.hpp  TXFMCipher.cpp  TXFMCipher.hpp  TXFMConcatChains.cpp  TXFMConcatChains.hpp  TXFMDocObject.cpp  TXFMDocObject.hpp  TXFMEnvelope.cpp  TXFMEnvelope.hpp  TXFMHash.cpp  TXFMOutputFile.cpp  TXFMOutputFile.hpp  TXFMParser.cpp  TXFMParser.hpp  TXFMSB.cpp  TXFMSB.hpp  TXFMURL.cpp  TXFMURL.hpp  TXFMXPath.cpp  TXFMXPath.hpp  TXFMXPathFilter.cpp  TXFMXPathFilter.hpp  TXFMXSL.cpp  TXFMXSL.hpp
src/xsec/utils/: XSECDOMUtils.cpp  XSECDOMUtils.hpp  XSECNameSpaceExpander.cpp  XSECNameSpaceExpander.hpp  XSECPlatformUtils.cpp  XSECPlatformUtils.hpp  XSECSOAPRequestor.hpp  XSECSOAPRequestorSimple.cpp  XSECSOAPRequestorSimple.hpp  XSECSafeBuffer.cpp  XSECSafeBuffer.hpp  XSECSafeBufferFormatter.cpp  XSECSafeBufferFormatter.hpp  XSECTXFMInputSource.hpp  XSECXPathNodeList.hpp
src/xsec/utils/unixutils/: XSECSOAPRequestorSimpleUnix.cpp
src/xsec/utils/winutils/: XSECSOAPRequestorSimpleWin32.cpp
src/xsec/xenc/: XENCCipher.hpp  XENCCipherData.hpp  XENCCipherReference.hpp  XENCCipherValue.hpp  XENCEncryptedData.hpp  XENCEncryptedKey.hpp  XENCEncryptedType.hpp  XENCEncryptionMethod.hpp
src/xsec/xenc/impl/: XENCAlgorithmHandlerDefault.cpp  XENCAlgorithmHandlerDefault.hpp  XENCCipherDataImpl.cpp  XENCCipherDataImpl.hpp  XENCCipherImpl.cpp  XENCCipherImpl.hpp  XENCCipherReferenceImpl.cpp  XENCCipherReferenceImpl.hpp  XENCCipherValueImpl.cpp  XENCEncryptedDataImpl.cpp  XENCEncryptedDataImpl.hpp  XENCEncryptedKeyImpl.cpp  XENCEncryptedKeyImpl.hpp  XENCEncryptedTypeImpl.cpp  XENCEncryptedTypeImpl.hpp  XENCEncryptionMethodImpl.cpp  XENCEncryptionMethodImpl.hpp
src/xsec/xkms/: XKMSAuthentication.hpp  XKMSCompoundRequest.hpp  XKMSCompoundResult.hpp  XKMSConstants.cpp  XKMSConstants.hpp  XKMSKeyBinding.hpp  XKMSKeyBindingAbstractType.hpp  XKMSLocateRequest.hpp  XKMSLocateResult.hpp  XKMSMessageAbstractType.hpp  XKMSMessageFactory.hpp  XKMSNotBoundAuthentication.hpp  XKMSPendingRequest.hpp  XKMSPrototypeKeyBinding.hpp  XKMSQueryKeyBinding.hpp  XKMSRegisterRequest.hpp  XKMSRegisterResult.hpp  XKMSRequestAbstractType.hpp  XKMSRespondWith.hpp  XKMSResponseMechanism.hpp  XKMSResult.hpp  XKMSResultType.hpp  XKMSStatus.hpp  XKMSStatusRequest.hpp  XKMSStatusResult.hpp  XKMSUnverifiedKeyBinding.hpp  XKMSUseKeyWith.hpp  XKMSValidateRequest.hpp  XKMSValidateResult.hpp  XKMSValidityInterval.hpp
src/xsec/xkms/impl/: XKMSAuthenticationImpl.cpp  XKMSAuthenticationImpl.hpp  XKMSCompoundRequestImpl.cpp  XKMSCompoundRequestImpl.hpp  XKMSCompoundResultImpl.cpp  XKMSCompoundResultImpl.hpp  (+50 more)
test_package/: CMakeLists.txt  conanfile.py  xtest.cpp
